--- a/public/no-api/index.html
+++ b/public/no-api/index.html
@@ -6,18 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="style.css">
+	<script src="//unpkg.com/alpinejs" defer></script>
+	<script src="taxi-queue.no-api.js"></script>
+	<link rel="stylesheet" href="../style.css">
 
 </head>
-<body>
-	<h1>Taxi queue app</h1>
+<body x-data="TaxiQueue" >
+	<h1>Taxi queue app - no API</h1>
+
+	<div>
+		Version <strong x-text="version" ></strong>
+	</div>
+
 	<div class="sections" >
 
 		<div class="section" >
 			<h2>Passengers</h2>
-			<img src="queue.png" alt="" width="100">
-			<img src="queue.png" alt="" width="100">
-			<img src="queue.png" alt="" width="100">
+			<img src="../images/queue.png" alt="" width="100">
+			<img src="../images/queue.png" alt="" width="100">
+			<img src="../images/queue.png" alt="" width="100">
 			<span class="passenger_queue_count count" >0</span>
 			<button class="join_queue">Join</button>
 			<button class="leave_queue">Leave</button>
@@ -26,19 +33,19 @@
 	
 		<div class="section" >
 			<h2>Taxis</h2>
-			<img src="minivan.png" alt="" width="100">
-			<img src="minivan.png" alt="" width="100">
-			<img src="minivan.png" alt="" width="100">
+			<img src="../images/minivan.png" alt="" width="100">
+			<img src="../images/minivan.png" alt="" width="100">
+			<img src="../images/minivan.png" alt="" width="100">
 			<span class="taxi_queue_count count" >0</span>
 			<button class="join_taxi_queue">Join queue</button>
 		</div>
 	
 		<div class="section" >
 			<h2>Taxi departing</h2>
-			<img src="arrow.png" alt="" width="100">
-			<img src="arrow.png" alt="" width="100">
-			<img src="arrow.png" alt="" width="100">
-			<img src="minivan.png" alt="" width="100">
+			<img src="../images/arrow.png" alt="" width="100">
+			<img src="../images/arrow.png" alt="" width="100">
+			<img src="../images/arrow.png" alt="" width="100">
+			<img src="../images/minivan.png" alt="" width="100">
 			<!-- <span class="taxi_queue_count count" >0</span> -->
 			<button class="depart">Depart</button>
 		</div>
