extend instructions & example API call

--- a/public/with-api/index.html
+++ b/public/with-api/index.html
@@ -9,7 +9,7 @@
 	<script src="//unpkg.com/alpinejs" defer></script>
 	<script src="taxi-queue.api.js"></script>
 	<link rel="stylesheet" href="../style.css">
-
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body x-data="TaxiQueue" >
 	<h1>Taxi queue app - with API</h1>
@@ -25,7 +25,7 @@
 			<img src="../images/queue.png" alt="" width="100">
 			<img src="../images/queue.png" alt="" width="100">
 			<img src="../images/queue.png" alt="" width="100">
-			<span class="passenger_queue_count count" >0</span>
+			<span class="passenger_queue_count count" x-text='queueLength' >0</span>
 			<button class="join_queue">Join</button>
 			<button class="leave_queue">Leave</button>
 	
