--- a/public/with-api/index.html
+++ b/public/with-api/index.html
@@ -45,7 +45,13 @@
         <img src="../images/arrow.png" alt="" width="100" />
         <img src="../images/minivan.png" alt="" width="100" />
         <!-- <span class="taxi_queue_count count" >0</span> -->
-        <button class="depart" x-on:click="taxiDepart">Depart</button>
+        <button
+          class="depart"
+          x-on:click="taxiDepart"
+          :disabled="taxiQueueLength ===0"
+        >
+          Depart
+        </button>
         <div x-show="showError" x-html="error"></div>
       </div>
     </div>
