taxi app without api

--- a/public/no-api/index.html
+++ b/public/no-api/index.html
@@ -32,7 +32,9 @@
         <img src="../images/minivan.png" alt="" width="100" />
         <img src="../images/minivan.png" alt="" width="100" />
         <span class="taxi_queue_count count" x-html="taxiCount">0</span>
-        <button class="join_taxi_queue">Join queue</button>
+        <button class="join_taxi_queue" x-on:click="taxiCount++">
+          Join queue
+        </button>
       </div>
 
       <div class="section">
@@ -42,7 +44,8 @@
         <img src="../images/arrow.png" alt="" width="100" />
         <img src="../images/minivan.png" alt="" width="100" />
         <!-- <span class="taxi_queue_count count" >0</span> -->
-        <button class="depart">Depart</button>
+        <button class="depart" x-on:click="depart">Depart</button>
+        <div x-show="showError" x-html="error"></div>
       </div>
     </div>
 
